Work on colour bug on IOS version of Safari

--- a/style.css
+++ b/style.css
@@ -64,6 +64,11 @@ button {
     background-color: #EDF5E1;
 }
 
+#options-top,
+#options-bottom {
+    color: black;
+}
+
 .option-buttons {
     border: none;
     background-color: transparent;
